--- a/style.css
+++ b/style.css
@@ -174,8 +174,7 @@ body {
   0px 2.7px 27px -7px rgba(0, 0, 0, 0.042),
   0px 4.2px 44.2px -7px rgba(0, 0, 0, 0.046),
   0px 7px 63.6px -7px rgba(0, 0, 0, 0.052),
-  0px 14px 80px -7px rgba(0, 0, 0, 0.07)
-}
+  0px 14px 80px -7px rgba(0, 0, 0, 0.07);}
 
 .container2 {
     margin-top: 170px;
@@ -194,4 +193,35 @@ body {
     letter-spacing: 0.6px;
     position: relative;
     top: -12px;
+}
+
+.container2 a {
+    text-decoration: none;
+    color: #2172f3;
+    font-family: oppp;
+    font-size: 13px;
+    background-color: white;
+    border-radius: 17px;
+    padding: 8px 12px;
+    letter-spacing: 0.5px;
+    position: relative;
+    top: 20px;
+    box-shadow:
+  0px 0.3px 1.8px -7px rgba(0, 0, 0, 0.017),
+  0px 0.6px 4.6px -7px rgba(0, 0, 0, 0.027),
+  0px 1.1px 9px -7px rgba(0, 0, 0, 0.033),
+  0px 1.8px 15.8px -7px rgba(0, 0, 0, 0.038),
+  0px 2.7px 27px -7px rgba(0, 0, 0, 0.042),
+  0px 4.2px 44.2px -7px rgba(0, 0, 0, 0.046),
+  0px 7px 63.6px -7px rgba(0, 0, 0, 0.052),
+  0px 14px 80px -7px rgba(0, 0, 0, 0.07);
+}
+
+.container2 i {
+    background-color: #3983f7;
+    color: whitesmoke;
+    border-radius: 50%;
+    padding: 5px 6px;
+    font-size: 10px;
+    margin-left: 4px;
 }
