--- a/style.css
+++ b/style.css
@@ -225,3 +225,11 @@ body {
     font-size: 10px;
     margin-left: 4px;
 }
+
+.footer p {
+    text-align: center;
+    font-family: poppins;
+    font-size: 12px;
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
